# photino.Native

./: .gitignore  CMakeLists.txt  CMakePresets.json
Photino.Native/: CMakeLists.txt  Photino.Windows.cpp  Photino.h
Photino.Test/: Photino.Test.csproj
